# math

./: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
core/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
core/examples/: readback_buffer.rs  simple_shader.rs  storage_buffer.rs  value_buffer.rs  wgpu_context.rs
core/src/: lib.rs  wgpu_context.rs
core/src/buffers/: buffers.rs  mod.rs  readback_buffer.rs  storage_buffer.rs  value_buffer.rs
core/src/model/: mod.rs  optimization_direction.rs  size.rs
core/src/model/iteration/: combined.rs  iteration.rs  mod.rs  not_implemented.rs
core/src/model/iteration/compiled/: compiled.rs  compiled_iteration.rs  mod.rs
core/src/model/iteration/problem/: cpu.rs  mod.rs  params.rs  shader.rs
core/src/model/iteration/sliced/: mod.rs  size.rs  sliced.rs  sliced_iteration.rs
core/src/shader/: shader.rs
core/tests/: mod.rs
core/tests/buffers/: copy.wgsl  mod.rs
core/tests/model/: mod.rs  optimization_direction.rs
core/tests/model/iteration/: mod.rs
core/tests/model/iteration/problem/: mod.rs  results.wgsl
core/tests/model/iteration/sliced/: mod.rs
core/tests/shader/: mod.rs  plus_one.wgsl
core/tests/wgpu_context/: mod.rs
ga/: Cargo.toml
ga/src/: context.rs  ga.rs  individual.rs  iteration_params.rs  lib.rs  options.rs
ga/src/common/: mod.rs
ga/src/common/parents/: mod.rs
ga/src/common/parents/random/: mod.rs  random.rs  tests.rs
ga/src/common/selectors/: mod.rs
ga/src/common/selectors/default/: default.rs  mod.rs  tests.rs
ga/src/continuous/: mod.rs
ga/src/continuous/crossovers/: mod.rs
ga/src/continuous/crossovers/blx_alpha/: blx_alpha.rs  blx_alpha.wgsl  mod.rs  options.rs
ga/src/continuous/crossovers/blx_alpha/tests/: iteration.rs  mod.rs  shader.rs
ga/src/continuous/initializers/random/: mod.rs  random.rs  tests.rs
ga/src/continuous/mutations/: mod.rs
ga/src/continuous/mutations/random/: random.rs  tests.rs
ga/src/data/: data.rs  mod.rs  tests.rs
problems/pn/: .gitignore  Cargo.toml  README.md  mnist_46257.json
problems/pn/examples/: ga.rs  gd.rs  mlp.rs  network_10.rs  network_13.rs  pn_mlp.rs  pn_sln.rs  view.rs
problems/pn/examples/py_scripts/: mlp.py  sln.py
problems/pn/examples/utils/: mod.rs  run_network_fn.rs
problems/pn/src/: lib.rs  pnp.rs  solution.rs
problems/pn/src/shaders/: mod.rs  options.rs  shaders.rs
problems/pn/src/shaders/wgsl/: multiply.wgsl  permutations.wgsl  results.wgsl  test.wgsl
problems/pn/tests/: mod.rs
problems/pn/tests/example/: mod.rs
problems/pn/tests/pnp/: mod.rs
problems/pn/tests/shaders/: mod.rs  multiply.rs  permutations.rs  results.rs
