[package]
name = "sgrmath_pn"
edition = "2018"
rust-version = "1.70.0"

[dependencies]
bytemuck.workspace = true
wgpu.workspace = true
sgrmath_core = { path = "../../core" }
tokio = { version="1.45.0", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version="1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tokio-test = "0.4"
sgrmath_ga = { path = "../../ga" }
